--- a/css/timeline.css
+++ b/css/timeline.css
@@ -12,10 +12,12 @@
     cursor: pointer;
     display: inline-block;
     text-align: center;
+    border: 1px solid black;
+    padding: 10px;
 }
 
 .addFirst.dragOver, .addLast.dragOver, .addBetween.dragOver {
-    width: 30px;
+    padding: 20px;
 }
 
 
